Fix layout gap issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   #__next {
-    @apply flex flex-col flex-1 justify-between;
+    @apply flex flex-col flex-1;
   }
 
   @import "./generic/colours.css";
